sequential api tests + fix orders test
